# spec-decoding

./: LICENSE  PROJECT_SPEC.md  README.md  WEEK1_SUMMARY.md  WEEK2_GUIDE.md  WEEK2_SUMMARY.md  pyproject.toml  setup.py
benchmarks/schemas/: schema_nested.json  schema_simple.json  schema_tool_call.json
docs/: WEEK1_GUIDE.md  WEEK2_GUIDE.md  WEEK2_SUMMARY.md
examples/: quickstart.py
results/: day2_baseline.md  day2_c4_test.md  day3_benchmark_full.md  day4_cuda_validation.md  day6_benchmark.md  week2_results_template.md
src/: adaptive_k.py  baseline.py  bench_week1.py  bench_week2.py  speculator.py  test_cuda_kernels.py  test_validity.py
src/_kernels/: __init__.py  bindings.cpp  kernel_loader.py  popcount_density.cu
tests/: test_benchmark_colab.py  test_e2e_colab.py  test_kernels.py  test_triton_colab.py  test_triton_fused_logit.py
velospec/: __init__.py  adaptive_k.py  cli.py  engine.py
velospec/kernels/: __init__.py  fused_sample.cu  grammar_masked_argmax.cu  loader.py
velospec/triton/: __init__.py  fused_logit_processor.py
