[build-system]
requires = ["setuptools>=64", "torch>=2.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "velospec"
version = "0.2.0"
description = "Grammar-aware adaptive speculative decoding for structured LLM output"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shilong Zhang"},
]
keywords = [
    "speculative-decoding",
    "grammar",
    "structured-output",
    "llm-inference",
    "cuda",
    "adaptive",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "xgrammar>=0.1",
    "accelerate>=0.20",
]

[project.optional-dependencies]
cuda = ["ninja>=1.11"]
dev = ["pytest>=7.0", "ipython"]

[project.scripts]
velospec = "velospec.cli:main"

[project.urls]
Homepage = "https://github.com/shilonggrad-design/spec-decoding"
Repository = "https://github.com/shilonggrad-design/spec-decoding"

[tool.setuptools]
packages = ["velospec", "velospec.kernels"]
